# sentinel-hackathon

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  WINNING-BUILD-PROMPT.md  deploy.sh  pyproject.toml  requirements.txt
.claude/skills/record-demo-video/: SKILL.md  driver.sh
agents/: architect.md  builder.md  content-positioning.md  demo-director.md  mcp-integration-engineer.md  safeguard-risk-engineer.md  submission-compliance.md
docs/: adr-001-architecture.md  demo-capture.txt  demo-script.md  devpost-unknowns-resolved.md  linkedin-post-draft.md  mcp-setup.md  submission-draft.md  tech-stack-confirmed.md
scripts/: demo_screenshots.py  record_demo.py
src/: __init__.py
src/mcp/: __init__.py  client.py
src/sentinel/: __init__.py  act.py  agent.py  detect.py  diagnose.py  gate.py  live.py  main.py  models.py  web.py
tests/: test_agent_gate.py  test_gate.py
workflows/: W1-scope-lock.md  W2-parallel-build.md  W3-integration.md  W4-demo-submit.md  W5-content-chain.md
